--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "tensorflow",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.19.2"
-  }
+	"name": "tensorflow",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@tensorflow-models/pose-detection": "^2.1.3",
+		"@tensorflow/tfjs-backend-webgl": "^4.20.0",
+		"@tensorflow/tfjs-converter": "^4.20.0",
+		"@tensorflow/tfjs-core": "^4.20.0",
+		"express": "^4.19.2",
+		"glob": "^11.0.0",
+		"lru-cache": "^11.0.0",
+		"nodemon": "^3.1.4",
+		"rimraf": "^6.0.1"
+	}
 }
