--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"glob": "^11.0.0",
 		"lru-cache": "^11.0.0",
 		"nodemon": "^3.1.4",
-		"rimraf": "^6.0.1"
+		"rimraf": "^6.0.1",
+		"socket.io": "^4.7.5"
 	}
 }
